agent-smith/dvwa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dvwa
  namespace: vulnerables
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: webfun.scottymcandrew.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dvwa-svc
            port:
              number: 80
  - host: agent-smith.scottymcandrew.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: agent-smith-svc
            port:
              number: 80
  ingressClassName: nginx
