agent-smith/ingress-aks.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-vulnerables
  namespace: vulnerables
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: webfun.scottymcandrew.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dvwa-svc
            port:
              number: 80
  - host: agent-smith.scottymcandrew.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: agent-smith-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-vulnerables-static
  namespace: vulnerables
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path:
        pathType: Prefix
        backend:
          service:
            name: dvwa-svc
            port: 
              number: 80
        path: /static(/|$)(.*)
